--- a/SpottedTrains/MainWindow.xaml
+++ b/SpottedTrains/MainWindow.xaml
@@ -9,32 +9,13 @@
         Width="800"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:MainWindowViewModel}">
-
-    <Window.Resources>
-        <ControlTemplate x:Key="errorTemplate">
-            <Border BorderBrush="OrangeRed" BorderThickness="2">
-                <Grid>
-                    <AdornedElementPlaceholder/>
-                    <TextBlock Text="{Binding [0].ErrorContent}" Foreground="OrangeRed"
-                               VerticalAlignment="Center" HorizontalAlignment="Right"
-                               Margin="0,0,4,0"/>
-                </Grid>
-            </Border>
-        </ControlTemplate>
-    </Window.Resources>
-
     <Grid Margin="100">
         <StackPanel>
-            <Label>Username</Label>
-            <TextBox Validation.ErrorTemplate="{StaticResource errorTemplate}">
-                <TextBox.Text>
-                    <Binding Path="TextValue" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged">
-                        <Binding.ValidationRules>
-                            <local:MinimumCharacterRule MinimumCharacters="5"/>
-                        </Binding.ValidationRules>
-                    </Binding>
-                </TextBox.Text>
-            </TextBox>
+            <local:MyTextbox BoundPropertyName="TextValue">
+                <local:MyTextbox.ValidationRules>
+                    <local:MinimumCharacterRule MinimumCharacters="4" />
+                </local:MyTextbox.ValidationRules>
+            </local:MyTextbox>
 
             <Button>Submit</Button>
         </StackPanel>
