--- a/SpottedTrains/App.xaml
+++ b/SpottedTrains/App.xaml
@@ -1,7 +1,6 @@
 ﻿<Application x:Class="SpottedTrains.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SpottedTrains"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <Style x:Key="TextBoxStyle" TargetType="TextBox">
@@ -10,11 +9,11 @@
                     <ControlTemplate>
                         <DockPanel LastChildFill="True">
                             <TextBlock DockPanel.Dock="Right"
-                                       Foreground="Orange"
+                                       Foreground="Blue"
                                        FontSize="12pt"
                                        Text="{Binding ElementName=MyAdorner, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}">
                             </TextBlock>
-                            <Border BorderBrush="Red" BorderThickness="2">
+                            <Border BorderBrush="Green" BorderThickness="2">
                                 <AdornedElementPlaceholder Name="MyAdorner" />
                             </Border>
                         </DockPanel>
